# ResourceCompiler

./: .gitignore  CMakeLists.txt
src/: ResourceCompiler.cpp
